# ai-alchemy

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
email-summarizer/: email_summarizer.py
src/: agent.py  main.py
