[project]
name = "ai-alchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"lancedb>=0.17.0",
	"langchain-core>=0.3.24",
	"langchain>=0.3.11",
	"ollama",
	"pandas>=2.2.3",
	"langchain-community>=0.3.11",
	"lance>=1.2.1",
	"streamlit>=1.41.0",
	"python-dotenv>=1.0.1",
	"uvicorn>=0.35.0",
	"python-multipart>=0.0.20",
	"fastapi>=0.116.1",
	"debugpy>=1.8.16",
	"langchain-groq>=0.2.1",
	"langchain-ollama>=0.2.1",
]
